<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#EFEFEF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="#638B2C"
            android:background="invisible"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto1"
            android:padding="8dp"
            android:background="#invisible"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto2"
            android:padding="8dp"
            android:background="#invisible"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto3"
            android:padding="8dp"
            android:background="#invisible"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto4"
            android:padding="8dp"
            android:background="#invisible"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="#638B2C"
            android:background="invisible"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
