<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lista"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaEcoPontos">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bem_vindo2"
        style="@style/radius"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_back_arrow"
        android:onClick="abrindo_tela_lista"
        android:padding="20dp"
        android:text="."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,OnClick" />

    <LinearLayout
        android:id="@+id/checkbox_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_bem_vindo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp"> <!-- Adicionando margem inferior para separar do Spinner -->

            <CheckBox
                android:id="@+id/checkboxPequeno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pequeno"
                android:layout_marginEnd="16dp" /> <!-- Adicionando margem à direita -->

            <CheckBox
                android:id="@+id/checkboxMedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Médio"
                android:layout_marginEnd="16dp" /> <!-- Adicionando margem à direita -->

            <CheckBox
                android:id="@+id/checkboxGrande"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Grande"
                android:layout_marginEnd="16dp" /> <!-- Adicionando margem à direita -->
        </LinearLayout>

        <Spinner
            android:id="@+id/spinnerCidade"
            android:layout_width="376dp"
            android:layout_height="58dp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_point_1"
        android:layout_width="377dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_item"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:tag="Barueri"
        app:layout_constraintTop_toBottomOf="@id/checkbox_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:src="@drawable/local" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_of_collection"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/view_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/view_details"
            android:textColor="#1E91ED"
            android:textSize="14sp"
            app:iconTint="#20F7FAF7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_point_2"
        android:layout_width="377dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_item"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:tag="Carapicuíba"
        app:layout_constraintTop_toBottomOf="@+id/collection_point_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:src="@drawable/local1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood_2"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_of_collection_2"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/view_details2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/view_details2"
            android:textColor="#1E91ED"
            android:textSize="14sp"
            app:iconTint="#20F7FAF7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_point_3"
        android:layout_width="377dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_item"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:tag="Itapevi"
        app:layout_constraintTop_toBottomOf="@+id/collection_point_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:src="@drawable/local3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood_3"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_of_collection_3"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/view_details3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/view_details3"
            android:textColor="#1E91ED"
            android:textSize="14sp"
            app:iconTint="#20F7FAF7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_point_4"
        android:layout_width="377dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_item"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:tag="Osasco"
        app:layout_constraintTop_toBottomOf="@+id/collection_point_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:src="@drawable/local4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood_4"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_of_collection_4"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/view_details4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/view_details4"
            android:textColor="#1E91ED"
            android:textSize="14sp"
            app:iconTint="#20F7FAF7" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_point_5"
        android:layout_width="377dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_item"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:tag="São Paulo"
        app:layout_constraintTop_toBottomOf="@+id/collection_point_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:src="@drawable/local5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neighborhood_5"
                android:textColor="#666"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_of_collection_5"
                android:textColor="#000"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/view_details5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/view_details5"
            android:textColor="#1E91ED"
            android:textSize="14sp"
            app:iconTint="#20F7FAF7" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>